--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,5 @@
 {
-   "version": 2,
-   "name": "music-album",
-   "builds": [
-      { "src": "/", "use": "@vercel/node" }
-   ],
-   "routes": [
-      { "src": "/(.*)", "dest": "/" }
-   ]
+   "rewrites":  [
+       {"source": "/(.*)", "destination": "/"}
+    ]
 }
